hphp/hack/test/sound_dynamic/typing/like_higher_order.bad.php.exp
File "like_higher_order.bad.php", line 20, characters 21-22:
Was expecting an object but type is unknown (Typing[4297])
  File "like_higher_order.bad.php", line 20, characters 14-15:
  It is unknown because the type of the lambda parameter could not be determined. Please add a type hint to the parameter
